--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "twitter",
+  "name": "twitter-premium-bookmarker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "filtered-stream.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index2.js"
+    "start": "node filtered-stream.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.24.0",
     "dotenv": "^16.0.0",
-    "needle": "^3.0.0",
-    "node-cron": "^3.0.0"
+    "mongoose": "^6.2.3",
+    "needle": "^3.0.0"
   }
 }
